# SMV-Extracter

./: .gitignore  BUILD_INFO.md  LICENSE  README.md  build_ci.py  build_nuitka.py  build_pyinstaller.py  main.py  nuitka-crash-report.xml  nuitka.toml  pyproject.toml  requirements-ci.txt  requirements-minimal.txt  requirements.txt
.github/workflows/: build.yml
hooks/: hook-sv_ttk.py
src/: __init__.py  app.py
src/core/: __init__.py  downloader.py  thumbnail_manager.py  video_processor.py
src/ui/: __init__.py  details_section.py  input_section.py  logging_section.py  main_window.py  slicer_section.py
src/utils/: helpers.py  logger.py
